--- a/FormeleMethodenCS/FormeleMethodenCS.csproj
+++ b/FormeleMethodenCS/FormeleMethodenCS.csproj
@@ -44,8 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DFA.cs" />
+    <Compile Include="NDFA.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IAutomata.cs" />
     <Compile Include="Transition.cs" />
   </ItemGroup>
   <ItemGroup>
