--- a/FormeleMethodenCS/FormeleMethodenCS.csproj
+++ b/FormeleMethodenCS/FormeleMethodenCS.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Automata.cs" />
+    <Compile Include="AutomataConverter.cs" />
+    <Compile Include="Converters\ThompsonConstruction.cs" />
     <Compile Include="DFA.cs" />
     <Compile Include="DFAGenerator.cs" />
     <Compile Include="Graphiz.cs" />
